// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddForm component tests renders properly 1`] = `
<div>
  <div
    class="add-form"
  >
    <button
      class="btn btn-info"
    >
      Add
    </button>
  </div>
</div>
`;

exports[`AddForm component tests renders properly with expanded form 1`] = `
<div>
  <div
    class="add-form"
  >
    <button
      class="btn btn-info"
    >
      Add
    </button>
    <div>
      <div>
        <label>
          id
        </label>
        <input
          class="form-control is-invalid"
        />
        <div
          class="invalid-feedback"
        >
          Please enter correct value
        </div>
      </div>
      <div>
        <label>
          firstName
        </label>
        <input
          class="form-control is-invalid"
        />
        <div
          class="invalid-feedback"
        >
          Please enter correct value
        </div>
      </div>
      <div>
        <label>
          lastName
        </label>
        <input
          class="form-control is-invalid"
        />
        <div
          class="invalid-feedback"
        >
          Please enter correct value
        </div>
      </div>
      <div>
        <label>
          email
        </label>
        <input
          class="form-control is-invalid"
        />
        <div
          class="invalid-feedback"
        >
          Please enter correct value
        </div>
      </div>
      <div>
        <label>
          phone
        </label>
        <input
          class="form-control is-invalid"
        />
        <div
          class="invalid-feedback"
        >
          Please enter correct value
        </div>
      </div>
      <button
        class="btn btn-success my-3"
        disabled=""
      >
        +
      </button>
    </div>
  </div>
</div>
`;
